styles/scss/vtex.flex-layout.scss
/* ... */
//css pagina reglamento de promociones
.flexRow--reglamento-de-promociones-pag-mob {
  .flexCol--reglamento-de-promociones-linea-footer {
    max-width: 100% !important;
    padding: 0em 0em 1em 0em !important;
  }
}

.flexRow--reglamento-de-promociones-pag {
  margin: 1rem;
  .stretchChildrenWidth {
    justify-content: flex-start;
  }
  .flexCol--reglamento-de-promociones-linea-footer {
    padding: 3em 1.5em 1em 1.5em;
    max-width: 75%;
  }

  .flexColChild--reglamento-de-promociones-pregunta {
    background: #ffffff no-repeat;
    border: 1px solid #dedede;
    border-radius: 5px;
    margin-bottom: 0.5em;
    padding: 0.5em;
  }

  :global(.vtex-disclosure-layout-1-x-trigger) {
    width: 100%;
    padding: 0;
    position: relative;
    outline: none;
  }

  :global(.vtex-rich-text-0-x-wrapper--reglamento-de-promociones-pregunta-title) {
    font-weight: bold;
    margin-bottom: 0.5em;
  }

  :global(.vtex-rich-text-0-x-paragraph--reglamento-de-promociones-pregunta-title) {
    margin: 0;
    color: #525252;
  }
}

/** pdp **/
.flexRow--product-pag {
  background: #fff;

  :global(.vtex-product-identifier-0-x-product-identifier__separator),
  :global(.vtex-product-identifier-0-x-product-identifier__label) {
    display: none;
  }

  :global(.vtex-product-identifier-0-x-product-identifier__value) {
    font-size: 14px;
    color: #898989;
    font-weight: bold;
    @media screen and (max-width: em(1024px)) {
      font-size: 16px;
    }
  }

  :global(.vtex-flex-layout-0-x-flexRowContent--product-buy-btn) {
    margin: 5px 0;
  }

  :global(.vtex-flex-layout-0-x-flexRow--product-buy-btn) {
    @media screen and (max-width: em(1024px)) {
      width: 100% !important;
    }
  }

  :global(.vtex-flex-layout-0-x-flexRow--row-two-components) {
    @media screen and (max-width: em(1024px)) {
      width: 100% !important;
    }
  }
}

:global(.vtex-flex-layout-0-x-flexColChild--product-pag-mobile) {
  background-color: #fff;
}
@media screen and (max-width: em(1024px)) {
  :global(.vtex-flex-layout-0-x-flexColChild--product-pag-mobile) {
    :global(.vtex-flex-layout-0-x-flexRowContent) {
      display: block;
    }
  }
}

:global(.vtex-flex-layout-0-x-flexCol--pdp-right-col) {
  position: relative;
  :global(.vtex-flex-layout-0-x-flexColChild--pdp-right-col) {
    height: auto !important;
    :global(.vtex-store-components-3-x-price_sellingPriceContainer--summary) {
      margin: 0;
    }
  }
}

:global(.vtex-stack-layout-0-x-stackItem--product-mobile-pdps) {
  position: initial;
  :global(.vtex-store-components-3-x-carouselGaleryThumbs) {
    display: none;
  }
}

:global(.vtex-flex-layout-0-x-flexRow--product-bread) {
  background: #fafafa;

  :global(.vtex-flex-layout-0-x-flexRowContent--product-bread) {
    padding: 0;
    margin: 5px 0;
  }
}

:global(.vtex-flex-layout-0-x-flexRow--product-description) {
  background: #fff;
  padding: 32px 0 0 0;
}
.flexCol--absolute {
  .flexColChild--absolute {
    &:last-child {
      display: flex;
      align-items: end;
    }
  }
}
@media screen and (max-width: em(1024px)) {
  .flexRowContent--relative {
    position: relative;
    .flexCol--absolute {
      top: 0px;
      position: absolute;
      width: 50% !important;
    }
  }
}

.flexRowContent--4-banners-big {
  @media screen and (max-width: em(1024px)) {
    :global(.vtex-flex-layout-0-x-stretchChildrenWidth) {
      width: 216px !important;
      display: inline-flex;
      margin-right: 8px;
    }
  }
}

.flexRow--4-banners-big {
  background-color: #fafafa;
  padding-top: 16px;
  padding-bottom: 32px;

  @media screen and (max-width: em(1024px)) {
    padding-top: 16px;
    padding-bottom: 16px;
    width: 100%;
    overflow-x: auto;
    white-space: nowrap;
  }
}

.flexCol--top-bottom-16 {
  margin-top: 16px;
  margin-bottom: 16px;
}

@media screen and (max-width: 1024px) {
  .flexCol--right-8 {
    margin-right: 0px;
  }
}

.flexRowContent--title-section {
  @media screen and (max-width: em(480px)) {
    position: relative;

    :global(.vtex-rich-text-0-x-container--buy-all) {
      position: absolute;
      top: 8px;
    }
  }
}

.flexRow--circles-mobile {
  background: #fafafa;
  /*@media screen and (min-width: em(920px)) and (max-width: em(1024px)) {
    :global(.vtex-flex-layout-0-x-flexRowContent--circles-mobile) {
      margin-left: 4rem;
    }
  }*/
  @media screen and (max-width: em(1024px)) {
    :global(.vtex-store-components-3-x-logoImage) {
      width: 100%;
      max-width: 100%;
      height: auto;
      border-radius: 100px;
      margin-left: 0px;
      margin-top: 16px;
      margin-bottom: 16px;
    }

    :global(.vtex-store-components-3-x-sizeMobile) {
      padding: 0px;
    }

    :global(.vtex-flex-layout-0-x-stretchChildrenWidth) {
      display: inline-flex;
      width: 128px !important;
      margin-right: 16px;
    }
  }
}

.flexRowContent--circles-mobile {
  @media screen and (max-width: em(1024px)) {
    width: 100%;
    overflow-x: auto;
    overflow-y: hidden;
    white-space: nowrap;
  }
}

.flexRow--2-footer-mobile {
  background-color: #333;
}

.flexCol--power-row-mobile {
  display: block;
  text-align: left;
  /* width: 100%; */
  /* overflow-x: auto; */
  /* white-space: nowrap; */

  .flexColChild--power-row-mobile {
    width: fit-content;
    display: inline-flex;
    padding-bottom: 0px;
  }
}

//css pagina servicios financieros
.flexRowContent--section-tarjetas {
  display: flex;
  align-items: center;
  border: solid 1px #00000014;
  border-radius: 10px;
  background-color: #fff;
  margin: 10px 0px;
  height: 152px;
}
.flexCol--textoajustepadding {
  padding-left: 10px;
}

.flexRowContent--textosflexdesk {
  display: flex;
  flex-direction: column;
}
/* ... */

